sandbox-codebase/objects/Contact/fields/Address_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Address_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated by flow for Mogli SMS Journey</description>
    <label>Address Confirmed?</label>
    <type>Checkbox</type>
</CustomField>