sandbox-codebase/objects/Contact/fields/Address_Update_Required__c.field-meta.xml
<CustomField>
    <fullName>Address_Update_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Update Required</label>
    <type>Checkbox</type>
</CustomField>