sandbox-codebase/objects/Contact/fields/External_Portal_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Portal_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Portal Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>