sandbox-codebase/objects/Contact/fields/heymarket__E164_Phone__c.field-meta.xml
<CustomField>
    <fullName>heymarket__E164_Phone__c</fullName>
    <formula>IF( LEN(SUBSTITUTE( 
 SUBSTITUTE( 
  SUBSTITUTE( 
   SUBSTITUTE( 
    SUBSTITUTE(
      IF(
      	$Setup.heymarket__Default_Phone_Field__c.heymarket__Contact__c == &apos;Phone&apos;, Phone, 
      		IF( $Setup.heymarket__Default_Phone_Field__c.heymarket__Contact__c == &apos;MobilePhone&apos;, MobilePhone, 
      			IF( $Setup.heymarket__Default_Phone_Field__c.heymarket__Contact__c == &apos;HomePhone&apos;, HomePhone, 
                    IF( $Setup.heymarket__Default_Phone_Field__c.heymarket__Contact__c == &apos;OtherPhone&apos;, OtherPhone, &apos;&apos;)
                )
      		)  
      	) , &quot;(&quot;, &quot;&quot;
    ), &quot;)&quot;, &quot;&quot; 
   ), &quot; &quot;, &quot;&quot;
  ), &quot;-&quot;, &quot;&quot;
 ), &quot;+&quot;, &quot;&quot;
)) == 10 , &apos;1&apos;+SUBSTITUTE( 
 SUBSTITUTE( 
  SUBSTITUTE( 
   SUBSTITUTE( 
    SUBSTITUTE(
      IF(
      	$Setup.heymarket__Default_Phone_Field__c.heymarket__Contact__c == &apos;Phone&apos;, Phone, 
      		IF( $Setup.heymarket__Default_Phone_Field__c.heymarket__Contact__c == &apos;MobilePhone&apos;, MobilePhone, 
      			IF( $Setup.heymarket__Default_Phone_Field__c.heymarket__Contact__c == &apos;HomePhone&apos;, HomePhone, 
                    IF( $Setup.heymarket__Default_Phone_Field__c.heymarket__Contact__c == &apos;OtherPhone&apos;, OtherPhone, &apos;&apos;)
                )
      		)  
      	) , &quot;(&quot;, &quot;&quot;
    ), &quot;)&quot;, &quot;&quot; 
   ), &quot; &quot;, &quot;&quot;
  ), &quot;-&quot;, &quot;&quot;
 ), &quot;+&quot;, &quot;&quot;
), SUBSTITUTE( 
 SUBSTITUTE( 
  SUBSTITUTE( 
   SUBSTITUTE( 
    SUBSTITUTE(
      IF(
      	$Setup.heymarket__Default_Phone_Field__c.heymarket__Contact__c == &apos;Phone&apos;, Phone, 
      		IF( $Setup.heymarket__Default_Phone_Field__c.heymarket__Contact__c == &apos;MobilePhone&apos;, MobilePhone, 
      			IF( $Setup.heymarket__Default_Phone_Field__c.heymarket__Contact__c == &apos;HomePhone&apos;, HomePhone, 
                    IF( $Setup.heymarket__Default_Phone_Field__c.heymarket__Contact__c == &apos;OtherPhone&apos;, OtherPhone, &apos;&apos;)
                )
      		)  
      	) , &quot;(&quot;, &quot;&quot;
    ), &quot;)&quot;, &quot;&quot; 
   ), &quot; &quot;, &quot;&quot;
  ), &quot;-&quot;, &quot;&quot;
 ), &quot;+&quot;, &quot;&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>E164 Phone</label>
    <type>Text</type>
</CustomField>