sandbox-codebase/objects/Contact/fields/heymarket__Primary_For_Sync__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Primary_For_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to mark record primary for Salesforce to Heymarket sync</description>
    <label>Primary For Sync</label>
    <type>Checkbox</type>
</CustomField>