sandbox-codebase/objects/Contact/fields/MRN__c.field-meta.xml
<CustomField>
    <fullName>MRN__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>A unique and external ID from another database.</description>
    <externalId>true</externalId>
    <label>MRN</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>