sandbox-codebase/objects/Contact/fields/Provider_Account__c.field-meta.xml
<CustomField>
    <fullName>Provider_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated by flow in order to be used in Mogli SMS Template (https://basecamp.com/2583453/projects/19794483/todos/515178473)</description>
    <label>Provider Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Provider_Account</relationshipName>
    <type>Lookup</type>
</CustomField>