sandbox-codebase/objects/Contact/fields/Provider_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Account_Name__c</fullName>
    <formula>If (
				(LEN(Provider_Account__r.Name) &gt; 35) &amp;&amp;
				(NOT(ISBLANK(Provider_Account__r.Account_Short_Name__c ))),
				Provider_Account__r.Account_Short_Name__c,
				Provider_Account__r.Name)</formula>
    <label>Provider Account Name</label>
    <type>Text</type>
</CustomField>