sandbox-codebase/objects/Contact/fields/Shipping_Address_Formula__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Formula__c</fullName>
    <description>Used in Mogli for merge fields</description>
    <formula>Account.ShippingStreet &amp; &quot; &quot;&amp; Account.ShippingCity &amp; &quot; &quot;&amp; TEXT(Account.ShippingStateCode)&amp;&quot;, &quot;&amp; Account.ShippingPostalCode</formula>
    <label>Shipping Address Formula</label>
    <type>Text</type>
</CustomField>