sandbox-codebase/objects/Contact/fields/SMS_Double_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>SMS_Double_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in flow and populated by a positive response to the Consent SMS message</description>
    <inlineHelpText>Mogli SMS Double Opt In</inlineHelpText>
    <label>SMS Double Opt In</label>
    <type>Checkbox</type>
</CustomField>