sandbox-codebase/objects/Contact/fields/SMS_Journey_Status__c.field-meta.xml
<CustomField>
    <fullName>SMS_Journey_Status__c</fullName>
    <label>SMS Journey Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Opt Status</fullName>
            </value>
            <value>
                <fullName>Initial Address Confirmation</fullName>
            </value>
            <value>
                <fullName>Waiting For Address</fullName>
            </value>
            <value>
                <fullName>Address Confirmed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>