sandbox-codebase/objects/Contact/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physician</fullName>
            </value>
            <value>
                <fullName>Sleep Test Technician</fullName>
            </value>
            <value>
                <fullName>Sales Champion</fullName>
            </value>
            <value>
                <fullName>Operations Champion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>