sandbox-codebase/objects/Contact/listViews/BulkMessageContacts.listView-meta.xml
<ListView>
    <fullName>BulkMessageContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.IS_PERSON_ACCOUNT</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Bulk SMS Contacts</label>
</ListView>